restauth-common 0.6.1 (XX XXXX 2013)

  * Various python3 compatability fixes
  * Add a requirements.txt file
  * Rename content handlers to standard python camel case:
    * json --> JSONContentHandler
    * xml --> XMLContentHandler
    * form --> FormContentHandler
   Old names are still available for now.
  * Add a minor test-suite to test the import feature.

restauth-common 0.6.0 (16 August 2012)

  * New exception 'Forbidden' for requests that throw HTTP status 403 Forbidden
  * Adhere to python coding standards
  * Update Copyright notices (some files still contained 'Foobar' as a program name)
  * All python source code is now pep8 clean
  * Cleanup: Remove old methods RestAuthCommon.marshal and
    RestAuthCommon.unmarshal.

restauth-common 0.5.1 (13 November 2011)

  * Catch ValueErrors from json library and wrap them in an UnmarshalError/MarshalError
  * setup.py now cleans *all* generated files
  * fix setup.py file in Python3 file (previously it threw an exception)
  * Handle version in a more consistant manner
  * This package is now included in PyPI
  * Use the most compact JSON representation

restauth-common 0.5.0 (29 August 2011)

  * Initial version based on version 0.5 of the RestAuth protocol.