@@ -8,6 +8,7 @@ restauth-common 0.6.1 (XX XXXX 2013)
     * form --> FormContentHandler
    Old names are still available for now.
   * Add a minor test-suite to test the import feature.
+  * Remove unused (and python2 specific) unmarshal_unicode method
 
 restauth-common 0.6.0 (16 August 2012)
 
